<resources>
    <string name="app_name">Miembros Iglesia</string>

    <string name="registrar">Registrar Miembro</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="cancelar">Cancelar</string>
    <string name="ingresar">Ingresar</string>
    <string name="sociedad">Sociedad:</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Mi Perfil</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Configuración</string>
    <string name="menu_share">Información</string>
    <string name="menu_send">Cerrar Sesión</string>

</resources>
