<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_menu_usuario"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@mipmap/ic_menu_ajustes"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate"
        android:id="@+id/opciones">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_menu_info"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/ic_menu_salir"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
