<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"

    tools:context=".IngresarMiembro">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registrar"
                    android:textAlignment="center"
                    android:textColor="#E91E63"
                    android:textSize="26dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/idImagen"
                    android:layout_marginLeft="110dp"
                    android:src="@drawable/fotomiembro"
                    android:onClick="onclick"
                    />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:layout_marginLeft="20dp"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/actNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/apellido"
                    android:layout_marginLeft="20dp"
                    android:textSize="18dp" />

                <EditText
                    android:id="@+id/actApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxWidth="10dp"
                    android:layout_marginRight="20dp"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sociedad"
                    android:layout_marginLeft="20dp"
                    android:textSize="18dp" />

                <Spinner
                    android:id="@+id/idspinner"
                    android:layout_width="225dp"
                    android:layout_height="42dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="351dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="61dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FBE75D5D"
                    android:text="@string/cancelar"
                    android:textColor="#FCFFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="wrap_content"
                    android:layout_height="61dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#70AC70"
                    android:text="@string/ingresar"
                    android:textColor="#FCFFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>